Added profile page

--- a/app/views/layouts/widget.html.erb
+++ b/app/views/layouts/widget.html.erb
@@ -27,6 +27,14 @@
   <%= javascript_include_tag "easyXDM.min" %>
   <%= javascript_include_tag "easyXDM.Widgets.min" %>
 
+  <%= stylesheet_link_tag "admin/font-awesome" %>
+  <%= stylesheet_link_tag "admin/application" %>
+  <%= stylesheet_link_tag "widget" %>
+  <%= javascript_include_tag "admin/application" %>
+  <%= javascript_include_tag "jquery.raty" %>
+  <%= javascript_include_tag "widget" %>
+
+
   <%= yield :head %>
   <%= csrf_meta_tags %>
   <script type="text/javascript">
