--- a/app/views/admin/overview/edit_post.html.erb
+++ b/app/views/admin/overview/edit_post.html.erb
@@ -11,7 +11,7 @@
     <br>
     <div class="modal-footer">
       <%= link_to "Close", "#", "data-dismiss" => "modal", :class => "btn", "aria-hidden" => true %>
-      <%= link_to_with_icon "icon-delete", "Delete", admin_delete_post_path(:id => @post.id) , :class => "pull-left btn btn-danger", :confirm => "Are you sure?", :method => :delete %>
+      <%= link_to_with_icon "icon-trash", "Delete", admin_delete_post_path(:id => @post.id) , :class => "pull-left btn btn-danger", :confirm => "Are you sure?", :method => :delete %>
       <%= button_tag "Save", :disable_with => "Processing", :class => "btn btn-primary" %>
     </div>
 
