--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -4,6 +4,10 @@
   <div style="padding:3px"></div>
   <% if @show_avatar %>
       <%= image_tag avatar_url(current_user), :style => "position:absolute; width:40px;" %>
+      <% if @current_user %>
+          <%= link_to "Profile", "#", :class => "open-win", "data-link" => account_path,
+                      :style => "font-size: 10px;margin-top: -17px;padding-top: 49px;position: absolute;" %>
+      <% end %>
   <% end %>
   <% if @current_widget.login_required && @current_user.blank? %>
       <% identifier = rand(19031903) %>
@@ -11,9 +15,9 @@
           <%= text_area_tag "comment_message", "", :id => "comment_message_#{identifier}", "data-form" => "login_form_#{identifier}", :placeholder => "Leave your message", :style => "max-height:250px; height:50px; width:100%; overflow:auto; resize:none;" %>
           <br/>
 
-          <%= hidden_field_tag :u, session[:current_widget_host]  %>
-          <%= hidden_field_tag :k, session[:current_widget_key]  %>
-          <%= hidden_field_tag :p, session[:current_page]  %>
+          <%= hidden_field_tag :u, session[:current_widget_host] %>
+          <%= hidden_field_tag :k, session[:current_widget_key] %>
+          <%= hidden_field_tag :p, session[:current_page] %>
 
           <div id="login_form_<%= identifier %>" class="post-actions" style="display: none;">
 
@@ -21,11 +25,12 @@
               <section data-tab="auth-external">
                 <div class="connect"><h6>Sign in with</h6>
                   <ul class="services">
-                    <li class="auth-twitter open-win"  data-link="<%= '/auth/twitter' + widget_params("?")  %>">
+                    <li class="auth-twitter open-win" data-link="<%= '/auth/twitter' + widget_params("?") %>">
                       <a data-action="auth:twitter " href="#" title="Twitter">Twitter</a></li>
-                    <li class="auth-facebook open-win" data-link="<%= '/auth/facebook' + widget_params("?")  %>">
+                    <li class="auth-facebook open-win" data-link="<%= '/auth/facebook' + widget_params("?") %>">
                       <a data-action="auth:facebook" href="#" title="Facebook">Facebook</a></li>
-                    <li class="auth-talky open-win " data-link="<%= '/authenticate/login' + widget_params("?")  %>" ><a data-action="auth:facebook" href="#" title="Facebook">TalkyCloud</a></li>
+                    <li class="auth-talky open-win " data-link="<%= '/authenticate/login' + widget_params("?") %>">
+                      <a data-action="auth:facebook" href="#" title="Facebook">TalkyCloud</a></li>
                   </ul>
                 </div>
                 <div class="guest"><h6> or register with TalkyCloud </h6>
@@ -57,13 +62,13 @@
           <%= f.text_area :message, :placeholder => "Leave your message", :style => "max-height:250px; height:50px; width:100%; overflow:auto; resize:none;" %>
           <br/>
 
-          <%= hidden_field_tag :u, session[:current_widget_host]  %>
-          <%= hidden_field_tag :k, session[:current_widget_key]  %>
-          <%= hidden_field_tag :p, session[:current_page]  %>
+          <%= hidden_field_tag :u, session[:current_widget_host] %>
+          <%= hidden_field_tag :k, session[:current_widget_key] %>
+          <%= hidden_field_tag :p, session[:current_page] %>
 
           <% if parent_id %>
               <%= f.hidden_field :parent_id, :value => parent_id %>
-              <%= hidden_field_tag :prepend_container,  "reply-form-container_#{parent_id}" %>
+              <%= hidden_field_tag :prepend_container, "reply-form-container_#{parent_id}" %>
           <% end %>
           <div id="action_form_<%= rand(19031903) %>" class="post-actions">
             <div class="btn-group pull-right">
