--- a/app/views/widgets/demo.html.erb
+++ b/app/views/widgets/demo.html.erb
@@ -55,7 +55,7 @@
               <ul class="recent-comments" id="comment_container">
                 <%= render :partial => "widgets/form" %>
               </ul>
-              <%= link_to "#{image_tag 'hero-image.png', :style => 'width:75px;height:50px;'}".html_safe, "//talkycloud.com" %>
+              <%= link_to "#{image_tag 'hero-image.png', :style => 'width:75px;height:50px;'}".html_safe, "#", :class => "open-win", "data-link" => "//talkycloud.com" %>
             </div>
           </div>
         </div>
