--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -16,10 +16,12 @@
         </div>
 
         <div class="input  full-width">
-          <%= f.select :gender, ['male', 'female'], {}, :placeholder => "Lastname", :class => "chzn-select" %>
+          <%= f.select :gender, ['male', 'female'], {:prompt => "Select Gender"}, :class => "chzn-select" %>
         </div>
 
-
+        <div class="input  full-width">
+          <%= select_tag :role, options_for_select(['admin', 'author']), :class => "chzn-select", :prompt => "Select Role" %>
+        </div>
       </div>
 
     </div>
